# curso_codando

cursoLipe/anotacaoes/: ArquiteturaDeSoftaware.txt  modularizacao.txt
cursoLipe/arquitetura/: Makefile  exemplo  pyproject.toml
cursoLipe/arquitetura/src/: main.py
cursoLipe/arquitetura/src/domain/models/: database_settings.py
cursoLipe/arquitetura/src/domain/services/: connect_database_factory.py  database_controller.py  database_controller_factory.py
cursoLipe/arquitetura/src/domain/usecases/: get_database_controller.py
cursoLipe/arquitetura/src/infrastructure/connect_database_factories/: connect_database_factory_postgres.py
cursoLipe/arquitetura/src/infrastructure/database_controller_factories/: database_controller_factory_postgres.py
cursoLipe/aula/: api.py  multThreading.py
cursoLipe/macarrao/: README.md  pyproject.toml
cursoLipe/macarrao/src/domain/models/: __init__.py  fogo.py  macarrao.py  panela.py  panela_com_agua.py
cursoLipe/macarrao/src/domain/services/: __init__.py  colocar_agua_na_panela_factory.py  fogo_factory.py  macarrao_factory.py  panela_fervendo_factory.py  pegar_panela_factory.py
cursoLipe/macarrao/src/domain/usecases/: aquecer_agua.py  encher_panela_de_agua.py
