[tool.poetry]
name = "macarrao"
version = "0.1.0"
description = ""
authors = ["pedronunes-devrise <pedronunes.devrise@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = "src" 